--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
       <version>1.72</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
 </project>
 
